--- a/demos/other.html
+++ b/demos/other.html
@@ -2,21 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8">		
-		<link rel="stylesheet" href="/static/css/styles.css" />
-		<link rel="stylesheet" href="/static/css/webpageui.css" />		
-		<link rel="stylesheet" href="/static/css/font-awesome.min.css" />
-		<link rel="stylesheet" href="/static/css/theme.css" />		
-		<link rel="stylesheet" href="/static/iefix.css" />
+		<link rel="stylesheet" href="/WebPageUI/static/css/styles.css" />
+		<link rel="stylesheet" href="/WebPageUI/static/css/webpageui.css" />		
+		<link rel="stylesheet" href="/WebPageUI/static/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="/WebPageUI/static/css/theme.css" />		
+		<link rel="stylesheet" href="/WebPageUI/static/iefix.css" />
 		<!--[if lt IE 10]>
-			<link rel="stylesheet" href="./static/iefix.css" />
+			<link rel="stylesheet" href="/WebPageUI/static/iefix.css" />
 		<![endif]-->
-		<script type="text/javascript" src="/static/js/webpageui.js"></script>
+		<script type="text/javascript" src="/WebPageUI/static/js/webpageui.js"></script>
 		<title>WebPageUI</title>
 	</head>
 	<body class="blackgold">
 		<div class="wpui-grid" id =app>
 			<div class="header">
-				<a class="logo" href="/"><img src="/static/images/logo.svg"/></a>
+				<a class="logo" href="/"><img src="/WebPageUI/static/images/logo.svg"/></a>
 			</div>
 			<div class="wpui-panel">				
 				<div class="main">
@@ -62,20 +62,9 @@
 	var btn = $wpui.DOM.selector('#button'); 
 	$wpui.DOM.on(btn, 'click', clickFn);
 	
-	$wpui.ajax({
-		url: 'http://192.168.1.8:50001/webapi/news/getnewslist.html',
-		data: {
-			page: 1
-		},
-		success: function(data) {
-			var list = data.list;
-			console.log(data.code);
-		}
-	});
-	
 	(function(){
 		$wpui.ajax({
-			url: '/templates/menu.html',
+			url: '/WebPageUI/templates/menu.html',
 			dataType: 'text',
 			success: function (data) {
 				$wpui.DOM.selector('#leftside').innerHTML = data;
